# semio_humanoid_ros

./: CMakeLists.txt  Readme.md  mainpage.dox  package.xml
include/semio/ros/: humanoid_sink_adapter.h  humanoid_sink_ros.h  humanoid_source_adapter.h  humanoid_source_ros.h
nodes/: CMakeLists.txt  semio_humanoid_server_node.cpp
src/: CMakeLists.txt  humanoid_sink_adapter.cpp  humanoid_sink_ros.cpp  humanoid_source_adapter.cpp  humanoid_source_ros.cpp
